--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@mui/material-next": "6.0.0-alpha.47",
+    "antd": "^4.22.6",
+    "axios": "^0.27.2",
+    "mui-tel-input": "^1.4.1",
     "next": "^12.2.2",
     "next-redux-wrapper": "^6.0.2",
     "next-seo": "^5.4.0",
@@ -33,6 +37,7 @@
     "react-redux": "^7.2.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
@@ -78,6 +83,7 @@
     "prettier": "^2.7.1",
     "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
+    "sass": "^1.54.5",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
