--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "@mui/material-next": "6.0.0-alpha.47",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "lodash": "^4.17.21",
     "mui-tel-input": "^1.4.1",
     "next": "^12.2.2",
     "next-redux-wrapper": "^6.0.2",
     "next-seo": "^5.4.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.8",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-promise-middleware": "^6.1.2",
