protected route done

--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "@mui/material-next": "6.0.0-alpha.47",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mui-tel-input": "^1.4.1",
     "next": "^12.2.2",
+    "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^6.0.2",
     "next-seo": "^5.4.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.8",
     "react-toastify": "^9.0.8",
