--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@hookform/resolvers": "^2.9.8",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
@@ -41,12 +42,14 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-redux": "^7.2.8",
     "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
